# NN-PBR

./: .gitignore  BC6_MODE10_TODO.md  BUILD_AND_FIX_SUMMARY.md  BUILD_STATUS.md  CMakeLists.txt  DEBUG_MESSAGES.md  DISCREPANCY_ROOT_CAUSE_ANALYSIS.md  FINAL_STATUS.md  FIXES_APPLIED.md  FIX_SUMMARY.md  FUNDAMENTAL_BUG_FIXED.md  README.md  RENDERING_DEBUG_GUIDE.md  TEXTURE_UPLOAD_FIX_STATUS.md  VALIDATION_ERRORS_FIXED.md  VALIDATION_RESULTS.md  VULKAN_DEMO.md  bc6h_spec.py  debug_full_vs_infer.py  debug_latents.py  export_true_bc6_dds.py  infrerenfe_nural_mateirals.py  neuralmaterials.py  prepare_freepbr_material.py  vk_neural_material_demo.cpp
.claude/: CLAUDE.md
.claude/agents/: demo-testing.md  paper-planner.md  python-core.md
.claude/reference/: NNPBR_GUIDE.md
.claude/skills/nnpbr-update-skills/: SKILL.md
.claude/skills/nnpbr-usage/: SKILL.md
data/freepbr/materials/red-plaid-bl/: dataset_report.json
data/freepbr/materials/scratched-up-steel-bl/: dataset_report.json
data/freepbr/materials/worn-rusted-painted-bl/: dataset_report.json
demo/: quality_metrics.json
demo/iter60_demo/: training_history.json
demo/iter60_demo/analysis/: quality_metrics.json
examples/vulkan_neural_material/: CMakeLists.txt
examples/vulkan_neural_material/shaders/: fullscreen_vs.hlsl  neural_material_fs.hlsl
runs/demo_120/: run_report.json  training_history.json
runs/demo_120/analysis/: quality_metrics.json
runs/demo_120/export/: metadata.json
runs/demo_120/export/true_bc6_dds/: latent_00.bc6.dds  latent_01.bc6.dds  latent_02.bc6.dds  latent_03.bc6.dds  true_bc6_export_report.json
runs/demo_256/: run_report.json  training_history.json
runs/demo_256/analysis/: quality_metrics.json
runs/demo_256/export/: latent_00.bc6.dds  latent_01.bc6.dds  latent_02.bc6.dds  latent_03.bc6.dds  metadata.json
runs/demo_256/export/metadata/: true_bc6_export_report.json
runs/full_demo/: run_report.json  training_history.json
runs/full_demo/analysis/: quality_metrics.json
runs/full_demo/export/: decoder_state.pt  metadata.json
runs/full_demo/export/latents/: latent_00_mip_00.bc6params.pt  latent_00_mip_00.pt  latent_00_mip_01.bc6params.pt  latent_00_mip_01.pt  latent_00_mip_02.bc6params.pt  latent_00_mip_02.pt  latent_00_mip_03.bc6params.pt  latent_00_mip_03.pt  latent_00_mip_04.bc6params.pt  latent_00_mip_04.pt  latent_00_mip_05.bc6params.pt  latent_00_mip_05.pt  latent_00_mip_06.bc6params.pt  latent_00_mip_06.pt  latent_00_mip_07.bc6params.pt  latent_00_mip_07.pt  latent_01_mip_00.bc6params.pt  latent_01_mip_00.pt  latent_01_mip_01.bc6params.pt  latent_01_mip_01.pt  latent_01_mip_02.bc6params.pt  latent_01_mip_02.pt  latent_01_mip_03.bc6params.pt  latent_01_mip_03.pt  latent_01_mip_04.bc6params.pt  latent_01_mip_04.pt  latent_01_mip_05.bc6params.pt  latent_01_mip_05.pt  latent_01_mip_06.bc6params.pt  latent_01_mip_06.pt  latent_02_mip_00.bc6params.pt  latent_02_mip_00.pt  latent_02_mip_01.bc6params.pt  latent_02_mip_01.pt  latent_02_mip_02.bc6params.pt  latent_02_mip_02.pt  latent_02_mip_03.bc6params.pt  latent_02_mip_03.pt  latent_02_mip_04.bc6params.pt  latent_02_mip_04.pt  (+12 more)
runs/iter60_demo/: run_report.json
runs/iter60_demo/export/: decoder_state.pt
runs/iter60_demo/export/latents/: latent_00_mip_00.bc6params.pt  latent_00_mip_00.pt  latent_00_mip_01.bc6params.pt  latent_00_mip_01.pt  latent_00_mip_02.bc6params.pt  latent_00_mip_02.pt  latent_00_mip_03.bc6params.pt  latent_00_mip_03.pt  latent_00_mip_04.bc6params.pt  latent_00_mip_04.pt  latent_00_mip_05.bc6params.pt  latent_00_mip_05.pt  latent_00_mip_06.bc6params.pt  latent_00_mip_06.pt  latent_00_mip_07.bc6params.pt  latent_00_mip_07.pt  latent_01_mip_00.bc6params.pt  latent_01_mip_00.pt  latent_01_mip_01.bc6params.pt  latent_01_mip_01.pt  latent_01_mip_02.bc6params.pt  latent_01_mip_02.pt  latent_01_mip_03.bc6params.pt  latent_01_mip_03.pt  latent_01_mip_04.bc6params.pt  latent_01_mip_04.pt  latent_01_mip_05.bc6params.pt  latent_01_mip_05.pt  latent_01_mip_06.bc6params.pt  latent_01_mip_06.pt  latent_02_mip_00.bc6params.pt  latent_02_mip_00.pt  latent_02_mip_01.bc6params.pt  latent_02_mip_01.pt  latent_02_mip_02.bc6params.pt  latent_02_mip_02.pt  latent_02_mip_03.bc6params.pt  latent_02_mip_03.pt  latent_02_mip_04.bc6params.pt  latent_02_mip_04.pt  (+12 more)
shaders/: debug_latent0.frag  debug_uv.frag  neural_material_decode.frag  neural_material_decode.hlsl  neural_material_decode.vert  neural_material_decode_debug.frag  simple_quad.frag  simple_quad_debug.frag  solid_red.frag  test_grid.frag  test_quad.frag  white_test.frag
